# CampaignLauncher

./: .env.example  .gitignore  CLAUDE.md  Plan.md  Progress.md  README.md  docker-compose.dev.yml  docker-compose.yml
docs/: Plan.md  Progress.md  SystemPrompt.md  rsa-behavioral-science.md
scripts/: dev-start.sh  dev-stop.sh  lint.sh  setup-env.sh  test-backend.sh  test-frontend.sh
src/backend/: Dockerfile  pyproject.toml
src/backend/alembic/: env.py
src/backend/alembic/versions/: 41f5195956f4_initial_schema.py  a2b3c4d5e6f7_add_campaign_settings.py
src/backend/app/: main.py
src/backend/app/core/: config.py  database.py  logging.py
src/backend/app/models/: __init__.py  ad.py  ad_group.py  base.py  campaign.py  keyword.py
src/backend/app/routers/: ads_script.py  campaigns.py  export.py  health.py  pipeline.py
src/backend/app/schemas/: ads_script.py  campaign.py  common.py  pipeline.py
src/backend/app/services/: ads_script_generator.py  campaign_saver.py  claude_analyzer.py  excel_export.py  excel_parser.py  page_fetcher.py  pipeline.py
src/frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
src/frontend/app/: layout.tsx  (+1 more)
tests/backend/: conftest.py  test_ads_script_endpoint.py  test_ads_script_generator.py  test_campaign_saver.py  test_campaigns.py  test_claude_analyzer.py  test_excel_export.py  test_excel_parser.py  test_export_endpoint.py  test_health.py  test_page_fetcher.py  test_pipeline.py
tests/frontend/: ads-script-display.test.tsx  campaign-detail.test.tsx  campaigns.test.tsx  confirm-modal.test.tsx  page.test.tsx
(+18 files in other folders)
